--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.1.0",
     "express": "^4.16.4",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.4.0",
     "md5": "^2.2.1",
     "mongoose": "^5.3.12"
   },
