--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "debug": "^4.1.0",
-    "event-stream": "^4.0.1",
+    "event-stream": "3.3.4",
     "express": "^4.16.4",
     "flatmap-stream": "0.0.1-security",
     "http": "0.0.0",
